--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ CI_ENVIRONMENT = development
 #--------------------------------------------------------------------
 
  database.default.hostname = localhost
- database.default.database = dishtavo
+ database.default.database = dishtavo2
  database.default.username = root
  database.default.password = 
  database.default.DBDriver = MySQLi
